--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
 <p>Welcome to your first GitHub Pages website!</p>
-<h1>HelLo tESt</h1>
+<h1>HelLo tEStinG</h1>
 
 </body>
 </html>
